# infotec_test

./: CMakeLists.txt  Dockerfile  README.md  Vagrantfile  bootstrap.sh
ansible/: build_sqlite.yml  install_docker.yml  inventory.ini
app/: CMakeLists.txt  build.sh  conanfile.py  main.cpp
